syntax = "proto3";

package product.service.v1;

import "google/api/annotations.proto";

option go_package = "api/product/v1;v1";

service ProductCatalogService {
  rpc ListProducts(ListProductsReq) returns (ListProductsResp) {
    option (google.api.http) = {
      get: "/v1/product/list"
    };
  }
  rpc GetProduct(GetProductReq) returns (GetProductResp) {
    option (google.api.http) = {
      get: "/v1/product/{id}"
    };
  }
  rpc SearchProducts(SearchProductsReq) returns (SearchProductsResp) {
    option (google.api.http) = {
      get: "/v1/product/{query}"
    };
  }
}

message ListProductsReq{
  int32 page = 1;
  int64 pageSize = 2;

  string categoryName = 3;
}

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string picture = 4;
  float price = 5;

  repeated string categories = 6;
}

message ListProductsResp {
  repeated Product products = 1;
}

message GetProductReq {
  uint32 id = 1;
}

message GetProductResp {
  Product product = 1;
}

message SearchProductsReq {
  string query = 1;
}

message SearchProductsResp {
  repeated Product results = 1;
}
